RESOLVED FIXED13083
onclick events which come from SVG elements have the wrong target...
https://bugs.webkit.org/show_bug.cgi?id=13083
Summary onclick events which come from SVG elements have the wrong target...
Andreas Känner
Reported 2007-03-15 10:11:23 PDT
... if the SVG area is embedded in a scrollable DIV-Area. Please try this example: http://www.projectwizards.net/ak/SVGClickEventBug.xhtml If you click on a SVG rect an alert will pop up which shows the rect number. The topmost rect has number 0 and the last rect has number 99. If you scroll down to see rect number 99 and if you click on it, a wrong number will be shown. It seems like WebKit does not take into account the offset caused by scrolling.
Attachments
the fix (10.97 KB, patch)
2007-06-01 02:46 PDT, Eric Seidel (no email)
oliver: review+
Eric Seidel (no email)
Comment 1 2007-06-01 02:17:59 PDT
Odd. I would have expected the div to have translated the click. Maybe we're just not respecting some parameter being passed into the hittest method on SVGSVGElement.
Eric Seidel (no email)
Comment 2 2007-06-01 02:46:51 PDT
Created attachment 14823 [details] the fix
Oliver Hunt
Comment 3 2007-06-01 03:04:09 PDT
Comment on attachment 14823 [details] the fix r=me
Eric Seidel (no email)
Comment 4 2007-06-01 03:11:16 PDT
Landed as r21936 on the feature-branch. Could be moved to TOT.
Note You need to log in before you can comment on or make changes to this bug.