2007-06-01  Eric Seidel  <eric@webkit.org>

Reviewed by olliej.

        SVG is not correctly respecting scroll during hit testing
        http://bugs.webkit.org/show_bug.cgi?id=13083

        Test: svg/custom/scroll-hit-test.svg

        * rendering/RenderPath.cpp:
        (WebCore::RenderPath::nodeAtPoint):
        * rendering/RenderSVGContainer.cpp:
        (WebCore::RenderSVGContainer::nodeAtPoint):


git-svn-id: http://svn.webkit.org/repository/webkit/branches/feature-branch@21936 268f45cc-cd09-0410-ab3c-d52691b4dbfc